src/test/resources/failing/fail83.pnd
P(1,2)
Q(3,4)

@inline Foo(x, _) <- P(x, z), Q(z, y), a = x + 1, y > a